Automatically highlight the first manual search result
Closes #48

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -267,7 +267,7 @@ BEGIN
     LTEXT           "Title:",IDC_STATIC,250,18,15,8
     EDITTEXT        IDC_MANUALSEARCH_ALBUM,149,16,89,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_MANUALSEARCH_TITLE,270,16,108,14,ES_AUTOHSCROLL
-    CONTROL         "",IDC_MANUALSEARCH_RESULTLIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,66,371,185
+    CONTROL         "",IDC_MANUALSEARCH_RESULTLIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,66,371,185
     EDITTEXT        IDC_MANUALSEARCH_PREVIEW,390,7,252,245,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
     LTEXT           "Click 'Search' to start searching",IDC_MANUALSEARCH_PROGRESS,66,44,228,8
     PUSHBUTTON      "Search",IDC_MANUALSEARCH_SEARCH,7,41,50,14
