Allow applying lyrics from manual search without closing the dialog
Part of the solution to #54

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -259,8 +259,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Search for lyrics"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDC_MANUALSEARCH_OK,529,260,50,14
-    PUSHBUTTON      "Cancel",IDC_MANUALSEARCH_CANCEL,592,260,50,14
+    DEFPUSHBUTTON   "OK",IDC_MANUALSEARCH_OK,479,260,50,14
+    PUSHBUTTON      "Cancel",IDC_MANUALSEARCH_CANCEL,536,260,50,14
     EDITTEXT        IDC_MANUALSEARCH_ARTIST,35,16,79,14,ES_AUTOHSCROLL
     LTEXT           "Artist:",IDC_STATIC,12,18,21,8
     LTEXT           "Album:",IDC_STATIC,123,18,26,8
@@ -271,6 +271,7 @@ BEGIN
     EDITTEXT        IDC_MANUALSEARCH_PREVIEW,390,7,252,245,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
     LTEXT           "Click 'Search' to start searching",IDC_MANUALSEARCH_PROGRESS,66,44,228,8
     PUSHBUTTON      "Search",IDC_MANUALSEARCH_SEARCH,7,41,50,14
+    PUSHBUTTON      "Apply",IDC_MANUALSEARCH_APPLY,592,260,50,14
 END
 
 
