Make the Musixmatch token text field hidden by default
Resolves #97

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -69,8 +69,9 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,146,313,10
     GROUPBOX        "Source-specific options",IDC_STATIC,0,170,331,88
     LTEXT           "Musixmatch Authentication Token:",IDC_STATIC,7,222,110,8
-    EDITTEXT        IDC_SEARCH_MUSIXMATCH_TOKEN,7,234,294,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SEARCH_MUSIXMATCH_TOKEN,7,234,261,14,ES_PASSWORD | ES_AUTOHSCROLL
     PUSHBUTTON      "?",IDC_SEARCH_MUSIXMATCH_HELP,305,234,20,14
+    PUSHBUTTON      "Show",IDC_SEARCH_MUSIXMATCH_SHOW,273,234,28,14
 END
 
 IDD_PREFERENCES_SAVING DIALOGEX 0, 0, 332, 288
