WIP: Allow configuring a separate font face/size for the highlight line

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -110,25 +110,27 @@ FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
     PUSHBUTTON      "Choose font...",IDC_FONT,120,12,192,18
     CONTROL         "",IDC_FOREGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,36,192,18,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_HIGHLIGHT_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,60,192,20,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,84,192,18,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_HIGHLIGHT_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,84,192,20,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,60,192,18,WS_EX_CLIENTEDGE
     CONTROL         "Custom text colour",IDC_FOREGROUND_COLOUR_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,74,10
     CONTROL         "Custom background colour",IDC_BACKGROUND_COLOUR_CUSTOM,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,101,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,101,10
     CONTROL         "Custom highlight colour",IDC_HIGHLIGHT_COLOUR_CUSTOM,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,89,10
-    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,55,193,40,12,ES_AUTOHSCROLL | ES_NUMBER
-    RTEXT           "Line gap:",IDC_STATIC,7,194,36,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,89,10
+    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,55,217,40,12,ES_AUTOHSCROLL | ES_NUMBER
+    RTEXT           "Line gap:",IDC_STATIC,7,218,36,10
     CONTROL         "Custom font",IDC_FONT_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,53,10
-    GROUPBOX        "Font && Colours",IDC_STATIC,0,0,326,114
-    GROUPBOX        "Other",IDC_STATIC,0,120,326,99
-    LTEXT           "Synced lyric scroll time:",IDC_STATIC,19,165,74,8
-    CONTROL         "",IDC_DISPLAY_SCROLL_TIME,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,103,161,201,15
-    CTEXT           "Static",IDC_DISPLAY_SCROLL_TIME_PREVIEW,112,175,184,8
-    COMBOBOX        IDC_DISPLAY_SCROLL_DIRECTION,227,136,78,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Scroll direction:",IDC_STATIC,171,137,49,8
-    COMBOBOX        IDC_DISPLAY_SCROLL_TYPE,47,136,94,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Scroll type:",IDC_STATIC,7,137,36,8
+    GROUPBOX        "Font && Colours",IDC_STATIC,0,0,326,134
+    GROUPBOX        "Other",IDC_STATIC,0,144,326,99
+    LTEXT           "Synced lyric scroll time:",IDC_STATIC,19,189,74,8
+    CONTROL         "",IDC_DISPLAY_SCROLL_TIME,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,103,185,201,15
+    CTEXT           "Static",IDC_DISPLAY_SCROLL_TIME_PREVIEW,112,199,184,8
+    COMBOBOX        IDC_DISPLAY_SCROLL_DIRECTION,227,160,78,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Scroll direction:",IDC_STATIC,171,161,49,8
+    COMBOBOX        IDC_DISPLAY_SCROLL_TYPE,47,160,94,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Scroll type:",IDC_STATIC,7,161,36,8
+    PUSHBUTTON      "Choose font...",IDC_HIGHLIGHT_FONT,120,108,192,18
+    CONTROL         "Custom highlight font",IDC_HIGHLIGHT_FONT_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,112,81,10
 END
 
 IDD_PREFERENCES_EDIT DIALOGEX 0, 0, 332, 288
