Pin the github action to a particular version of the Windows runner

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-release:
     name: Build Release
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     steps:
     - name: Print installed Windows SDK versions
