Add an option to enable additional debug logging
Resolves #37

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -130,6 +130,7 @@ BEGIN
     LTEXT           "Scroll direction:",IDC_STATIC,171,137,49,8
     COMBOBOX        IDC_DISPLAY_SCROLL_TYPE,47,136,94,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Scroll type:",IDC_STATIC,7,137,36,8
+    CONTROL         "Debug logging enabled",IDC_DEBUG_LOGS_ENABLED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,270,89,10
 END
 
 IDD_PREFERENCES_EDIT DIALOGEX 0, 0, 332, 288
