Re-word preferences for local files from 'save' to 'storage' folder
Resolves #139

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -90,7 +90,7 @@ BEGIN
     GROUPBOX        "Local Files",IDC_STATIC,0,150,331,107
     GROUPBOX        "Metadata Tags",IDC_STATIC,0,81,331,61
     COMBOBOX        IDC_SAVE_DIRECTORY_CLASS,90,202,199,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Save directory:",IDC_STATIC,37,204,48,8
+    RTEXT           "Storage directory:",IDC_STATIC,14,204,71,8
     LTEXT           "Custom directory format:",IDC_STATIC,10,226,79,8
     EDITTEXT        IDC_SAVE_CUSTOM_PATH,89,223,200,14,ES_AUTOHSCROLL
     LTEXT           "Static",IDC_SAVE_CUSTOM_PATH_PREVIEW,90,244,202,8,SS_PATHELLIPSIS
