Add 64-bit build configuration
Initial support for #183

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,11 @@ jobs:
     - name: Configure libxml2 build
       run: 3rdparty\libxml2-2.9.10\win32\configure.bat
 
-    - name: Build binary
+    - name: Build 32-bit binary
       run: msbuild /m /p:Configuration=Release /p:Platform=x86 build\foo_openlyrics.sln
+
+    - name: Build 64-bit binary
+      run: msbuild /m /p:Configuration=Release /p:Platform=x64 build\foo_openlyrics.sln
 
     - name: Pack binary into archive
       shell: bash
@@ -34,8 +37,21 @@ jobs:
         release_version="${GITHUB_REF#refs/tags/}"
         release_name="foo_openlyrics-${release_version}"
         echo "Release version ${release_version}"
-        7z a -tzip "${release_name}.fb2k-component" ".\build\Release\foo_openlyrics.dll"
-        7z a "${release_name}-with_debug_symbols.zip" ".\build\Release\foo_openlyrics.dll" ".\build\Release\foo_openlyrics.pdb"
+        mkdir -p build_component_staging\x64
+        pushd build_component_staging
+        cp "..\build\Release\foo_openlyrics.dll" "."
+        cp "..\build\x64\Release\foo_openlyrics.dll" "x64\"
+        7z a -tzip "..\${release_name}.fb2k-component" "."
+        popd
+        mkdir -p build_symbols_staging\x86
+        mkdir -p build_symbols_staging\x64
+        pushd build_symbols_staging
+        cp "..\build\Release\foo_openlyrics.dll" "x86\"
+        cp "..\build\Release\foo_openlyrics.pdb" "x86\"
+        cp "..\build\x64\Release\foo_openlyrics.dll" "x64\"
+        cp "..\build\x64\Release\foo_openlyrics.pdb" "x64\"
+        7z a "..\${release_name}-with_debug_symbols.zip" "."
+        popd
         echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
         echo "RELEASE_NAME=${release_name}" >> $GITHUB_ENV
 
