Switch to linux path separators for bash mkdir in archive packing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,16 +34,14 @@ jobs:
         release_version="${GITHUB_REF#refs/tags/}"
         release_name="foo_openlyrics-${release_version}"
         echo "Release version ${release_version}"
-        mkdir -p build_component_staging\x64
-        pwd
-        ls -lah
+        mkdir -p build_component_staging/x64
         pushd build_component_staging
         cp "..\build\Release\foo_openlyrics.dll" "."
         cp "..\build\x64\Release\foo_openlyrics.dll" "x64\"
         7z a -tzip "..\${release_name}.fb2k-component" "."
         popd
-        mkdir -p build_symbols_staging\x86
-        mkdir -p build_symbols_staging\x64
+        mkdir -p build_symbols_staging/x86
+        mkdir -p build_symbols_staging/x64
         pushd build_symbols_staging
         cp "..\build\Release\foo_openlyrics.dll" "x86\"
         cp "..\build\Release\foo_openlyrics.pdb" "x86\"
