Add support for continuously scrolling synced lyrics
This is part 1 of the solution to #192

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -118,15 +118,15 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,101,10
     CONTROL         "Custom highlight colour",IDC_HIGHLIGHT_COLOUR_CUSTOM,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,89,10
-    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,55,193,40,12,ES_AUTOHSCROLL | ES_NUMBER
-    RTEXT           "Line gap:",IDC_STATIC,7,194,36,10
+    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,50,193,40,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Line gap:",IDC_STATIC,7,194,31,10
     CONTROL         "Custom font",IDC_FONT_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,53,10
     GROUPBOX        "Font && Colours",IDC_STATIC,0,0,326,114
     GROUPBOX        "Other",IDC_STATIC,0,120,326,99
-    LTEXT           "Synced lyric scroll time:",IDC_STATIC,19,165,74,8
-    CONTROL         "",IDC_DISPLAY_SCROLL_TIME,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,103,161,201,15
-    CTEXT           "Static",IDC_DISPLAY_SCROLL_TIME_PREVIEW,112,175,184,8
-    COMBOBOX        IDC_DISPLAY_SCROLL_DIRECTION,227,136,78,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Synced lyric scroll time:",IDC_STATIC,7,165,74,8
+    CONTROL         "",IDC_DISPLAY_SCROLL_TIME,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,83,161,229,15
+    CTEXT           "Static",IDC_DISPLAY_SCROLL_TIME_PREVIEW,83,178,229,8
+    COMBOBOX        IDC_DISPLAY_SCROLL_DIRECTION,227,136,85,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Scroll direction:",IDC_STATIC,171,137,49,8
     COMBOBOX        IDC_DISPLAY_SCROLL_TYPE,47,136,94,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Scroll type:",IDC_STATIC,7,137,36,8
