--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build 32-bit binary
-      run: msbuild /m /p:Configuration=Release /p:Platform=x86 build\foo_openlyrics.sln
+      run: msbuild /r /m /p:Configuration=Release /p:Platform=x86 build\foo_openlyrics.sln
 
     - name: Build 64-bit binary
-      run: msbuild /m /p:Configuration=Release /p:Platform=x64 build\foo_openlyrics.sln
+      run: msbuild /r /m /p:Configuration=Release /p:Platform=x64 build\foo_openlyrics.sln
 
     - name: Pack binary into archive
       shell: bash
